--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Website</title>
-    <link rel="stylesheet" href="Style35.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <div class="header_section">
